--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Marc Molta",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.3",
     "request": "^2.81.0",
     "twit": "^2.2.9"
   }
