--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "each day it picks a random country and tweets its current #1 song, according to Spotify",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.1.0",
+    "express": "^4.15.3",
     "request": "^2.81.0",
     "supertest": "^3.0.0",
     "twit": "^2.2.9"
