--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "node server/index.js"
+    "start": "node server/main.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.1.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "request": "^2.81.0",
     "supertest": "^3.0.0",
