--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "node server/main.js"
+    "start": "node server/spotify_api_calls.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
     "supertest": "^3.0.0",
     "twit": "^2.2.9"
   }
