--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "node server/main.js"
+    "start": "node server/spotify_api_calls.js"
   },
   "repository": {
     "type": "git",
